--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/liaml/OneDrive/Documents/Game Programming/CS3540FP/WebGL Builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/raymondtsai/CS3540FP/Group8_FP4;C:/Users/liaml/OneDrive/Documents/Game Programming/CS3540FP/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
